2024-10-20 [1.42 Bld 278]

- Bugfix      : correct encoding of PDP-11 instructions
                M(F|T)P(D|I)
- Change      : uCOM-43: Issue warning when decision about
                CZP's argument type is unclear
- Change      : Introduce short circuit evaluation for
                logical AND and OR.
- Bugfix      : regard different arguments for LDS/LDD on
                TMS99110 and TI990.

2024-09-29 [1.42 Bld 277]

- Change      : IFDEF, IFNDEF, and DEFINED() also accept an
                expression as argument, not only a simple
                symbol name.  They return true if the
                expression does not contain any symbols
                that are undefined up to now.
- Bugfix      : Add missing PDP-11 instructions STCFD and STCDF.
- Bugfix      : 68K: Assume default operand size of 8 bits also
                for FScc and PScc, not only for Scc.
- Bugfix      : 68K: Allow PC-relative addressing for FRESTORE
                and PRESTORE.

2024-09-15 [1.42 Bld 276]

- Bugfix      : Regard infinities for DC.{SDP}, DD, and DQ
- Bugfix      : ...as a consequence, do not allow 'INF' for
                user-defined symbols
- Bugfix      : ifdef ..., if defined(...), and ifused ...
                did not check for valid symbol names
- Bugfix      : correct entry address printout for PLIST

2024-09-01 [1.42 Bld 275]

- Addition    : P2BIN warns if checksum overwrites data from
                source file(s)
- Bugfix      : uCOM-43: correct behaviour of JCP on last
                address in 64 byte page.

2024-08-25 [1.42 Bld 274]

- Addition    : pre-define variable FLOATMAX
- Addition    : use 80 bit extended float on host platforms
                supporting it

2024-08-05 [1.42 Bld 273]

- Addition    : support NEC uCOM 43/44/45

2024-07-24 [1.42 Bld 272]

- Change      : If the file name given as argument to INCLUDE
                or BINCLUDE does not contain an extension, the
                name extended by .INC and the plain name is