@@ -12920,6 +12920,12 @@ Angaben:
                 es sich um eine Adresse oder einen Vektor handelt.  Da das Argument eine
                 reine Zahl und keinem Segment zugeordnet ist, wird es als Vektor behandelt.}
                {das fragliche Argument}
+\errentry{ 490}{Zu grosse Integer-Konstante wird als Gleitkomma interpretiert}
+               {Warnung}
+               {Das Argument ist zwar eine syntaktisch korrekte Ganzzahl-Konstante, ihr
+                Wert ist aber au"serhalb dessen, was intern als Ganzzahl dargestellt
+                werden kann.  Die Zahl wird deswegen als Gleitkomma-Zahl gespeichert.}
+               {das fragliche Argument}
 \errentry{1000}{Symbol doppelt definiert}
                {Fehler}
                {Einem Symbol wurde durch ein Label oder
