@@ -70,6 +70,7 @@ typedef enum
   ErrNum_CaseWrongArgCnt = 460,
   ErrNum_ReplacedByNOP = 470,
   ErrNum_TreatedAsVector = 480,
+  ErrNum_LargeIntAsFloat = 490,
   ErrNum_DoubleDef = 1000,
   ErrNum_SymbolUndef = 1010,
   ErrNum_InvSymName = 1020,
