@@ -123,7 +123,7 @@ static void pseudo_lqxx(Integer num)
 
 typedef void (*tcallback)(
 #ifdef __PROTOS__
-Boolean *, int *, LongInt, tSymbolFlags
+Boolean *, int *, LargeInt, tSymbolFlags
 #endif
 );
 
@@ -192,7 +192,7 @@ func_exit:
   as_tempres_free(&t);
 }
 
-static void wr_code_byte(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
+static void wr_code_byte(Boolean *ok, int *adr, LargeInt val, tSymbolFlags Flags)
 {
   if (!mFirstPassUnknownOrQuestionable(Flags) && !RangeCheck(val, Int8))
   {
@@ -204,7 +204,7 @@ static void wr_code_byte(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
   CodeLen = *adr;
 }
 
-static void wr_code_word(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
+static void wr_code_word(Boolean *ok, int *adr, LargeInt val, tSymbolFlags Flags)
 {
   if (!mFirstPassUnknownOrQuestionable(Flags) && !RangeCheck(val, Int16))
   {
@@ -216,17 +216,20 @@ static void wr_code_word(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
   CodeLen = *adr;
 }
 
-static void wr_code_long(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
+static void wr_code_long(Boolean *ok, int *adr, LargeInt val, tSymbolFlags Flags)
 {
-  UNUSED(ok);
-  UNUSED(Flags);
-
+  if (!mFirstPassUnknownOrQuestionable(Flags) && !RangeCheck(val, Int32))
+  {
+    WrError(ErrNum_OverRange);
+    *ok = False;
+    return;
+  }
   WAsmCode[(*adr)++] = val & 0xffff;
   WAsmCode[(*adr)++] = val >> 16;
   CodeLen = *adr;
 }
 
-static void wr_code_byte_hilo(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
+static void wr_code_byte_hilo(Boolean *ok, int *adr, LargeInt val, tSymbolFlags Flags)
 {
   if (!mFirstPassUnknownOrQuestionable(Flags) && !RangeCheck(val, Int8))
   {
@@ -241,7 +244,7 @@ static void wr_code_byte_hilo(Boolean *ok, int *adr, LongInt val, tSymbolFlags F
   CodeLen = ((*adr) + 1) / 2;
 }
 
-static void wr_code_byte_lohi(Boolean *ok, int *adr, LongInt val, tSymbolFlags Flags)
+static void wr_code_byte_lohi(Boolean *ok, int *adr, LargeInt val, tSymbolFlags Flags)
 {
   if (!mFirstPassUnknownOrQuestionable(Flags) && !RangeCheck(val, Int8))
   {
